# travel-planning-open-env

./: Dockerfile  Dockerfile (44)  README.md  inference .py  inference.py  openenv.yaml  pyproject.toml
server/: __init__.py  app.py
travel-frontend/: Dockerfile  README.md  start.sh
travel-frontend/frontend/: app.js  index.html  styles.css
travel-frontend/server/: app .py  app.py  travel_env.py
